<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.ocera.orte.shape_android.SubscriberActivity" >

    <item
        android:id="@+id/action_switch"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/action_switch"
        android:icon="@drawable/ic_action_refresh" />
    
    <item android:id="@+id/action_blue"
          android:title="@string/action_blue"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_green"
          android:title="@string/action_green"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_red"
          android:title="@string/action_red"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_black"
          android:title="@string/action_black"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_yellow"
          android:title="@string/action_yellow"
          android:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_help" />

</menu>
