<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.ocera.orte.shape_android.PublisherActivity" >

    <item
        android:id="@+id/action_switch"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/action_switch"
        android:icon="@drawable/ic_action_refresh" />
    
    <item
        android:id="@+id/action_new"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"
        android:icon="@drawable/ic_action_new" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_help" />

</menu>
